@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-10-26T00:52:11Z",
-  "count_outdated" : 1336,
-  "uniques_outdated" : 861,
-  "count" : 1342,
-  "uniques" : 867,
+  "timestamp" : "2024-10-28T00:56:07Z",
+  "count_outdated" : 1337,
+  "uniques_outdated" : 862,
+  "count" : 1343,
+  "uniques" : 868,
   "clones" : [
-    {
-      "timestamp": "2024-10-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-10-14T00:00:00Z",
       "count": 1,
@@ -43,6 +34,15 @@
     },
     {
       "timestamp": "2024-10-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
