@@ -1,12 +1,7 @@
 {
   "count": 6,
-  "uniques": 6,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2024-10-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-10-14T00:00:00Z",
       "count": 1,
@@ -24,6 +19,11 @@
     },
     {
       "timestamp": "2024-10-25T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-10-27T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
